more unit tests & config for prefixes computing chunk size