@@ -46,7 +46,7 @@ public class GenerateClusterIndexTasklet implements Tasklet {
         return RepeatStatus.FINISHED;
     }
 
-    private void generateClusterIndex(final Long jobId, final Set<String> prefixes) throws IOException {
+    void generateClusterIndex(final Long jobId, final Set<String> prefixes) throws IOException {
 
         ClusterFileIndex clusterFileIndex = ClusterFileIndex.builder()
                 .iteration(jobId.intValue())
@@ -55,7 +55,7 @@ public class GenerateClusterIndexTasklet implements Tasklet {
 
         log.info("Generating cluster index : " + outputPath + File.separator + CLUSTER_INDEX_FILENAME);
 
-        Path jsonPath = Paths.get(outputPath + File.separator + CLUSTER_INDEX_FILENAME);
+        Path jsonPath = Path.of(outputPath, CLUSTER_INDEX_FILENAME);
         File jsonIndex = jsonPath.toFile();
         objectMapper.enable(SerializationFeature.INDENT_OUTPUT);
         objectMapper.writeValue(jsonIndex, clusterFileIndex);
